--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=desafioBackEnd
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+spring.datasource.url=jdbc:sqlite:sqlite_data/sqlite_data.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.initialize=true
