feat: deploy railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=desafioBackEnd
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:sqlite_data/sqlite_data.db
 spring.datasource.initialize=true
+server.port=8090
